# Solidity_basico_educaETH

./: .env  ERC20.sol  ERC20_flattened.sol  README.md  array.sol  connection.py  hola_mundo.sol  hola_mundo_dinamico.sol  if_else.sol  mapping.sol  solidity_vasr.sol  tc_arb.sol  variables_nativas.sol
.states/vm-cancun/: state.json
Solidity/: loop.sol
artifacts/: Educateth.json  Educateth_metadata.json  Loop.json  Loop_metadata.json  Mapping.json  Mapping_metadata.json  array.json  array_metadata.json  hola_mundo.json  hola_mundo_dinamico.json  hola_mundo_dinamico_metadata.json  hola_mundo_metadata.json  ifElse.json  ifElse_metadata.json  solidity_vars.json  solidity_vars_metadata.json  tc_arb.json  tc_arb_metadata.json  variables_nativas.json  variables_nativas_metadata.json
conexion_arb/: .gitignore  connection.py  pyproject.toml
hardhat/: hardhat.config.ts  package-lock.json  package.json
hardhat/deploy/: 00-deploy-lock.ts
hardhat/deployments/localhost/: Lock.json
hardhat/test/: Lock.ts
